[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scene/SceneResource/TileSetGround1.tres" type="TileSet" id=1]
[ext_resource path="res://Scene/WalkSceneTemplate1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Trigger/ChangeSceneFromTrigger.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Trigger/ChangeSceneToTrigger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Trigger/NPCTrigger.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/SceneResource/TileSetConstruction1.tres" type="TileSet" id=6]
[ext_resource path="res://Scene/SceneResource/TileSetCollision1.tres" type="TileSet" id=7]
[ext_resource path="res://Scene/Trigger/NPCArticleTrigger.tscn" type="PackedScene" id=8]
[ext_resource path="res://Script/Scene/Scene4Home.gd" type="Script" id=9]
[ext_resource path="res://Scene/Collision/DoorCollision.tscn" type="PackedScene" id=10]

[node name="Scene4Home" instance=ExtResource( 2 )]
script = ExtResource( 9 )

[node name="tileMapGround" parent="." index="0"]
tile_set = ExtResource( 1 )
tile_data = PoolIntArray( -196609, 0, 0, -131074, 20, 0, -131073, 17, 0, -196608, 20, 0, -65539, 20, 0, -65538, 17, 0, -65537, 17, 0, -131072, 17, 0, -131071, 20, 0, -4, 20, 0, -3, 20, 0, -2, 17, 0, -1, 17, 0, -65536, 17, 0, -65535, 20, 0, -65534, 20, 0, 65533, 23, 0, 65534, 14, 0, 65535, 17, 0, 0, 17, 0, 1, 23, 0, 131069, 20, 0, 131070, 17, 0, 131071, 17, 0, 65536, 9, 0, 65537, 20, 0, 196605, 20, 0, 196606, 17, 0, 196607, 17, 0, 131072, 17, 0, 131073, 20, 0, 262141, 20, 0, 262142, 23, 0, 262143, 20, 0, 196608, 20, 0, 196609, 20, 0 )

[node name="changeSceneFromTriggerA" parent="node2DChangeSceneTrigger" index="0" instance=ExtResource( 3 )]
position = Vector2( -32, -210 )
changeToSceneTypeID = 2
changeToChangeSceneToTriggerTypeID = 4

[node name="changeSceneToTrigger1" parent="node2DChangeSceneTrigger" index="1" instance=ExtResource( 4 )]
position = Vector2( -32, -90 )
changeSceneToTriggerTypeID = 1

[node name="nPCArticleTriggerBag" parent="node2DNPCArticleTrigger" index="0" instance=ExtResource( 8 )]
position = Vector2( 32, 96 )
nPCArticleTriggerTypeID = 1

[node name="nPCArticleTriggerJournalRecordBook" parent="node2DNPCArticleTrigger" index="1" instance=ExtResource( 8 )]
position = Vector2( -96, -15 )
nPCArticleTriggerTypeID = 2

[node name="nPCArticleTriggerDoor" parent="node2DNPCArticleTrigger" index="2" instance=ExtResource( 8 )]
position = Vector2( -32, -160 )
nPCArticleTriggerTypeID = 5

[node name="doorCollision" parent="node2DNPCArticleTrigger/nPCArticleTriggerDoor" index="2" instance=ExtResource( 10 )]

[node name="nPCArticleTrigger9" parent="node2DNPCArticleTrigger" index="3" instance=ExtResource( 8 )]
position = Vector2( 224, 32 )
nPCArticleTriggerTypeID = 9

[node name="nPCTrigger1" parent="node2DNPCTrigger" index="0" instance=ExtResource( 5 )]
position = Vector2( -96, 160 )
nPCTriggerTypeID = 3

[node name="tileMapConstruction" parent="." index="8"]
tile_set = ExtResource( 6 )
tile_data = PoolIntArray( 65532, 2, 0, 2, 2, 0 )

[node name="tileMapCollision" parent="." index="9"]
tile_set = ExtResource( 7 )
tile_data = PoolIntArray( -131075, 0, 0, -131074, 0, 0, -196608, 0, 0, -196607, 0, 0, -65539, 0, 0, -131071, 0, 0, -3, 0, 0, -65535, 0, 0, 65533, 0, 0, 1, 0, 0, 131069, 0, 0, 65537, 0, 0, 196605, 0, 0, 131073, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0 )
